--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: yarn release
+          publish: pnpm release
           commit: "ci(changesets): version packages"
           title: "ci(changesets): version packages"
         env:
@@ -47,9 +47,8 @@ jobs:
       - name: Release to @dev tag
         if: steps.changesets.outputs.published != 'true'
         run: |
-          git checkout main
-          yarn changeset version --snapshot dev
-          yarn changeset publish --tag dev
+          pnpm changeset version --snapshot dev
+          pnpm changeset publish --tag dev
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
