fix node publish

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,7 +22,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: pnpm
+          check-latest: true
+          cache: pnp
 
       - name: Install dependencies
         run: pnpm install
