add repo and mark publish config

--- a/packages/opentelemetry-sdk-workers/package.json
+++ b/packages/opentelemetry-sdk-workers/package.json
@@ -20,6 +20,13 @@
     "tracing"
   ],
   "author": "Richard Simpson <richicoder1@outlook.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RichiCoder1/opentelemetry-sdk-workers.git"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT",
   "engines": {
     "node": ">=14",
