--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["@cloudflare/workers-types"]
+    "types": ["@cloudflare/workers-types", "@types/long"]
   }
 }
