--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@changesets/cli": "^2.23.2",
         "@cloudflare/workers-types": "^3.14.1",
         "@lerna-lite/cli": "^1.6.0",
+        "@types/long": "^4.0.2",
         "nx": "^14.4.3",
         "tsup": "^6.1.3",
         "typescript": "^4.7.4"
