--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v3
         with:
+          submodules: 'true'
           fetch-depth: 0
 
       - name: Setup PNPM
