--- a/packages/opentelemetry-sdk-workers/tsconfig.json
+++ b/packages/opentelemetry-sdk-workers/tsconfig.json
@@ -6,7 +6,8 @@
             "ES2020"
         ],
         "types": [
-            "@cloudflare/workers-types"
+            "@cloudflare/workers-types",
+            "@types/long"
         ]
     }
 }
