add logging example; fully update samples

--- a/samples/proto-worker/package.json
+++ b/samples/proto-worker/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "worker-sample",
+    "name": "proto-worker-sample",
     "private": true,
     "devDependencies": {
         "wrangler": "^2.0.22"
