--- a/.editorconfig
+++ b/.editorconfig
@@ -6,10 +6,10 @@ end_of_line = lf
 insert_final_newline = true
 
 [*.{ts,js}]
-indent_size = tab
+indent_style = tab
 trim_trailing_whitespace = true
 
 [*.{yml,yaml}]
-indent_size = space
+indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
