massive dependency update

--- a/packages/opentelemetry-sdk-workers/tsconfig.json
+++ b/packages/opentelemetry-sdk-workers/tsconfig.json
@@ -6,8 +6,7 @@
             "ES2020"
         ],
         "types": [
-            "@cloudflare/workers-types",
-            "@types/long"
+            "@cloudflare/workers-types"
         ]
     }
 }
