--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-    "packageManager": "pnpm@7.5.2",
+    "packageManager": "pnpm@7.26.3",
     "scripts": {
         "build": "nx run-many --target=build --all",
         "changeset": "changeset",
         "release": "changeset publish"
     },
     "devDependencies": {
-        "@changesets/changelog-github": "^0.4.5",
-        "@changesets/cli": "^2.23.2",
-        "@cloudflare/workers-types": "^3.14.1",
-        "@lerna-lite/cli": "^1.6.0",
-        "@types/long": "^4.0.2",
-        "nx": "^14.4.3",
-        "tsup": "^6.1.3",
-        "typescript": "^4.7.4"
+        "@changesets/changelog-github": "^0.4.8",
+        "@changesets/cli": "^2.26.0",
+        "@cloudflare/workers-types": "^4.20230115.0",
+        "@lerna-lite/cli": "^1.15.0",
+        "@types/long": "^5.0.0",
+        "nx": "^15.6.3",
+        "tsup": "^6.5.0",
+        "typescript": "^4.9.5"
     },
     "pnpm": {
         "overrides": {
