--- a/packages/opentelemetry-sdk-workers/package.json
+++ b/packages/opentelemetry-sdk-workers/package.json
@@ -79,21 +79,22 @@
     "pnpm": ">=7"
   },
   "dependencies": {
-    "@opentelemetry/api": "^1.1.0",
-    "@opentelemetry/core": "^1.4.0",
-    "@opentelemetry/otlp-exporter-base": "^0.30.0",
-    "@opentelemetry/otlp-transformer": "^0.30.0",
-    "@opentelemetry/resources": "^1.4.0",
-    "@opentelemetry/sdk-trace-base": "^1.4.0",
-    "@opentelemetry/semantic-conventions": "^1.4.0",
-    "protobufjs": "^7.0.0"
+    "@opentelemetry/api": "^1.4.0",
+    "@opentelemetry/core": "^1.9.1",
+    "@opentelemetry/otlp-exporter-base": "^0.35.1",
+    "@opentelemetry/otlp-transformer": "^0.35.1",
+    "@opentelemetry/resources": "^1.9.1",
+    "@opentelemetry/sdk-trace-base": "^1.9.1",
+    "@opentelemetry/semantic-conventions": "^1.9.1",
+    "protobufjs": "^7.2.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.14.1",
-    "@opentelemetry/instrumentation": "^0.30.0",
+    "@cloudflare/workers-types": "^4.20230115.0",
+    "@opentelemetry/instrumentation": "^0.35.1",
     "@types/lodash-es": "^4.17.6",
-    "diary": "^0.3.1",
+    "diary": "^0.4.3",
     "lodash-es": "^4.17.21",
-    "protobufjs-cli": "^1.0.0"
+    "long": "^5.2.1",
+    "protobufjs-cli": "^1.1.1"
   }
 }
