adapt to diary changes

--- a/packages/opentelemetry-sdk-workers/package.json
+++ b/packages/opentelemetry-sdk-workers/package.json
@@ -27,7 +27,7 @@
   "typesVersions": {
     "*": {
       "*": [
-        "dist/types/index.d.ts"
+        "dist/index.d.ts"
       ],
       "exporters/OTLPProtoTraceExporter": [
         "dist/exporters/OTLPProtoTraceExporter.d.ts"
