--- a/samples/proto-worker/wrangler.toml
+++ b/samples/proto-worker/wrangler.toml
@@ -1,3 +1,7 @@
 name = "proto-worker"
 main = "src/index.ts"
 compatibility_date = "2022-07-18"
+
+[vars]
+OTEL_SERVICE_NAME = "proto-worker"
+OTEL_EXPORTER_OTLP_ENDPOINT = "https://api.honeycomb.io"
