--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-    "packageManager": "pnpm@7.26.3",
-    "scripts": {
-        "build": "nx run-many --target=build --all",
-        "changeset": "changeset",
-        "release": "changeset publish"
-    },
-    "devDependencies": {
-        "@changesets/changelog-github": "^0.4.8",
-        "@changesets/cli": "^2.26.0",
-        "@cloudflare/workers-types": "^4.20230115.0",
-        "@lerna-lite/cli": "^1.15.0",
-        "@types/long": "^5.0.0",
-        "nx": "^15.6.3",
-        "tsup": "^6.5.0",
-        "typescript": "^4.9.5"
-    },
-    "pnpm": {
-        "overrides": {
-            "@octokit/rest": "^19.0.0"
-        }
-    }
+	"scripts": {
+		"build": "nx run-many --target=build --all",
+		"dev": "nx run-many --target=dev --all",
+		"changeset": "changeset",
+		"release": "changeset publish"
+	},
+	"devDependencies": {
+		"@changesets/changelog-github": "^0.4.8",
+		"@changesets/cli": "^2.26.0",
+		"@cloudflare/workers-types": "^4.20230115.0",
+		"@lerna-lite/cli": "^1.15.0",
+		"@types/long": "^5.0.0",
+		"nx": "^15.6.3",
+		"tsup": "^6.5.0",
+		"typescript": "^4.9.5"
+	},
+	"yarn": {
+		"overrides": {
+			"@octokit/rest": "^19.0.0"
+		}
+	}
 }
