It looks like I need to build before typgen

--- a/packages/opentelemetry-sdk-workers/package.json
+++ b/packages/opentelemetry-sdk-workers/package.json
@@ -40,7 +40,7 @@
 	},
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"typegen": "yarn proto:types",
+		"typegen": "yarn build && yarn proto:types",
 		"build": "yarn proto:build && tsup",
 		"dev": "yarn typegen && tsup --watch",
 		"proto:build": "pbjs --target static-module --wrap es6 --path proto/opentelemetry/proto common/v1/common.proto resource/v1/resource.proto trace/v1/trace.proto logs/v1/logs.proto collector/logs/v1/logs_service.proto collector/trace/v1/trace_service.proto --out src/proto.js",
