--- a/packages/opentelemetry-sdk-workers/package.json
+++ b/packages/opentelemetry-sdk-workers/package.json
@@ -74,7 +74,7 @@
 	"dependencies": {
 		"@opentelemetry/api": "^1.6.0",
 		"@opentelemetry/core": "^1.17.0",
-		"@opentelemetry/instrumentation": "^0.43.0",
+		"@opentelemetry/instrumentation": "0.44.0",
 		"@opentelemetry/otlp-exporter-base": "^0.43.0",
 		"@opentelemetry/otlp-transformer": "^0.43.0",
 		"@opentelemetry/resources": "^1.17.0",
